--- a/app/src/main/res/layout/activity_recycler_view.xml
+++ b/app/src/main/res/layout/activity_recycler_view.xml
@@ -6,17 +6,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".view.RecyclerViewActivity">
 
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layoutAnimation="@anim/item_animation_layout"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         tools:listitem="@layout/item_custom_recycler"
         tools:itemCount="3"/>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
