--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,34 +7,44 @@
     tools:context=".view.MainActivity">
 
     <ImageView
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         android:id="@+id/mainImageViewLogo"
-        app:layout_constraintDimensionRatio="1:1"
         android:layout_width="0dp"
         android:layout_height="128dp"
-        android:src="@drawable/ic_jordroid"/>
-
-    <Button
-        app:layout_constraintTop_toBottomOf="@id/mainImageViewLogo"
+        android:layout_marginTop="32dp"
+        android:src="@drawable/ic_jordroid"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/mainButtonRecyclerView"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
         android:id="@+id/mainButtonActivityIntent"
-        android:text="Activity with intent"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <Button
-        app:layout_constraintTop_toBottomOf="@id/mainButtonActivityIntent"
+        android:layout_height="wrap_content"
+        android:text="Activity with intent"
+        app:layout_constraintBottom_toTopOf="@+id/mainButtonRecyclerView"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/mainImageViewLogo" />
+
+    <Button
         android:id="@+id/mainButtonRecyclerView"
-        android:text="RecyclerView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:text="RecyclerView"
+        app:layout_constraintBottom_toTopOf="@+id/mainButtonActivityChain"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/mainButtonActivityIntent" />
+
+    <Button
+        android:id="@+id/mainButtonActivityChain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Chains constraint layout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/mainButtonRecyclerView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
