--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,9 +42,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Chains constraint layout"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/mainButtonActivityStrings"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mainButtonRecyclerView" />
+
+    <Button
+        android:id="@+id/mainButtonActivityStrings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Strings"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/mainButtonActivityChain" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
