--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,6 +54,16 @@
         android:text="Strings"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/mainButtonActivityResource"
+        app:layout_constraintTop_toBottomOf="@id/mainButtonActivityChain" />
+
+    <Button
+        android:id="@+id/mainButtonActivityResource"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ressources"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/mainButtonActivityStrings"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mainButtonActivityChain" />
 
