Small UI/UX update for fun

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="buttonMainActivity" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="android:backgroundTint">@android:color/white</item>
+        <item name="android:padding">16dp</item>
+        <item name="strokeColor">@android:color/white</item>
+    </style>
 </resources>
