--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,80 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.MainActivity">
+    android:fillViewport="true">
 
-    <ImageView
-        android:id="@+id/mainImageViewLogo"
-        android:layout_width="0dp"
-        android:layout_height="128dp"
-        android:layout_marginTop="32dp"
-        android:src="@drawable/ic_jordroid"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#f6f7f8"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        tools:context=".view.MainActivity">
 
-    <Button
-        android:id="@+id/mainButtonActivityIntent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Activity with intent"
-        app:layout_constraintBottom_toTopOf="@+id/mainButtonRecyclerView"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mainImageViewLogo" />
+        <ImageView
+            android:id="@+id/mainImageViewLogo"
+            android:layout_width="wrap_content"
+            android:layout_height="128dp"
+            android:layout_marginTop="32dp"
+            android:src="@drawable/ic_jordroid"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/mainButtonRecyclerView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="RecyclerView"
-        app:layout_constraintBottom_toTopOf="@+id/mainButtonActivityChain"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mainButtonActivityIntent" />
+        <Button
+            android:id="@+id/mainButtonActivityIntent"
+            style="@style/buttonMainActivity"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Activity with intent"
+            app:layout_constraintBottom_toTopOf="@+id/mainButtonRecyclerView"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/mainImageViewLogo" />
 
-    <Button
-        android:id="@+id/mainButtonActivityChain"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Chains constraint layout"
-        app:layout_constraintBottom_toTopOf="@+id/mainButtonActivityStrings"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mainButtonRecyclerView" />
+        <Button
+            android:id="@+id/mainButtonRecyclerView"
+            style="@style/buttonMainActivity"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="RecyclerView"
+            app:layout_constraintBottom_toTopOf="@+id/mainButtonActivityChain"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/mainButtonActivityIntent" />
 
-    <Button
-        android:id="@+id/mainButtonActivityStrings"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Strings"
-        app:layout_constraintBottom_toTopOf="@+id/mainButtonActivityValuesLand"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/mainButtonActivityResource"
-        app:layout_constraintTop_toBottomOf="@id/mainButtonActivityChain" />
+        <Button
+            android:id="@+id/mainButtonActivityChain"
+            style="@style/buttonMainActivity"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Chains constraint layout"
+            app:layout_constraintBottom_toTopOf="@+id/mainButtonActivityStrings"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/mainButtonRecyclerView" />
 
-    <Button
-        android:id="@+id/mainButtonActivityResource"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Ressources"
-        app:layout_constraintBottom_toTopOf="@+id/mainButtonActivityValuesLand"
-        app:layout_constraintLeft_toRightOf="@+id/mainButtonActivityStrings"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mainButtonActivityChain" />
+        <Button
+            android:id="@+id/mainButtonActivityStrings"
+            style="@style/buttonMainActivity"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="16dp"
+            android:text="Strings"
+            app:layout_constraintBottom_toTopOf="@+id/mainButtonActivityValuesLand"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/mainButtonActivityResource"
+            app:layout_constraintTop_toBottomOf="@id/mainButtonActivityChain" />
 
-    <Button
-        android:id="@+id/mainButtonActivityValuesLand"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Values land"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mainButtonActivityStrings" />
+        <Button
+            android:id="@+id/mainButtonActivityResource"
+            style="@style/buttonMainActivity"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:text="Ressources"
+            app:layout_constraintBottom_toTopOf="@+id/mainButtonActivityValuesLand"
+            app:layout_constraintLeft_toRightOf="@+id/mainButtonActivityStrings"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/mainButtonActivityChain" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/mainButtonActivityValuesLand"
+            style="@style/buttonMainActivity"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Values land"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/mainButtonActivityStrings" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
