--- a/app/src/main/res/layout/item_custom_recycler.xml
+++ b/app/src/main/res/layout/item_custom_recycler.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="128dp"
+    android:layout_height="96dp"
+    android:layout_margin="8dp"
     android:background="@drawable/custom_background">
 
     <ImageView
