--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,10 +88,21 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Values land"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/mainButtonActivityPermission"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/mainButtonActivityStrings" />
+
+        <Button
+            android:id="@+id/mainButtonActivityPermission"
+            style="@style/buttonMainActivity"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Permission"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/mainButtonActivityValuesLand" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
