--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,10 +99,21 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Permission"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/mainButtonActivityFirebase"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/mainButtonActivityValuesLand" />
+
+        <Button
+            android:id="@+id/mainButtonActivityFirebase"
+            style="@style/buttonMainActivity"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Firebase"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/mainButtonActivityPermission" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
